Bug #34655 Compile error
Submitted: 19 Feb 2008 8:47 Modified: 14 Mar 2008 3:01
Reporter: Georg Richter
Status: Closed
Category:C API Severity:S1 (Critical)
Version:5.1.23 OS:Any
Assigned to: Davi Arnaut Target Version:5.1+
Triage: D1 (Critical)

[19 Feb 2008 8:47] Georg Richter
Description:
Renaming net->last_err* to net->client_last_err* causes compile errors in connectors which
use the internal net structure for error handling.

This affects C/ODBC, PHP (bug #44137) and Perl.

How to repeat:
see http://bugs.php.net/bug.php?id=44137

Suggested fix:
revert renaming.
[19 Feb 2008 12:36] Sveta Smirnova
Thank you for the report.

Verified as described.
[28 Feb 2008 18:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/43168

ChangeSet@1.2551, 2008-02-28 14:55:46-03:00, davi@mysql.com +12 -0
  Bug#34655 Compile error
  
  Rename client_last_error to last_error and client_last_errno to last_errno
  to not break connectors which use the internal net structure for error handling.
[29 Feb 2008 15:17] Davi Arnaut
Queued in 5.1-runtime
[1 Mar 2008 15:53] Sveta Smirnova
Bug #34969 was marked as duplicate of this one.
[1 Mar 2008 17:42] Sveta Smirnova
Bug #34970 was marked as duplicate of this one.
[3 Mar 2008 19:18] Bugs System
Pushed into 5.1.24-rc
[3 Mar 2008 19:18] Bugs System
Pushed into 6.0.5-alpha
[3 Mar 2008 22:05] Paul DuBois
Noted in 5.1.24, 6.0.5 changelogs.

In MySQL 5.1.23, the last_errno and last_error members of the NET
structure in mysql_com.h were renamed to client_last_errno and
client_last_error. This was found to cause problems for connectors
that use the internal NET structure for error handling. The change
has been reverted. (See also Bug#12713)
[2 Apr 2008 22:06] Jon Stephens
Fix also noted in the 5.1.23-ndb-6.2.14 and 5.1.23-ndb-6.3.11 changelogs.